[package]
name = "why-ui-rs"
version = "0.1.0"
authors = ["Jorge Perez Burgos <vaijira@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1"
dominator = "0.5"
futures = "0.3"
futures-signals = "0.3"
js-sys = "0.3"
log = "0.4"
once_cell = "1.7"
wasm-bindgen = "0.2"
wasm-logger = "0.2"
why-data =  { path = "../why-data" }
why-parser =  { path = "../why-parser" }

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "SvgGeometryElement",
    "SvgPathElement",
    "SvgPoint",
]

